--- a/offer_57.ipynb
+++ b/offer_57.ipynb
@@ -14,12 +14,37 @@
     "输入：[1,2,4,7,11,15],15\n",
     "返回值：[4,11]\n",
     "说明：返回 [4,11] 或者 [11,4] 都是可以的 \n",
-    "```"
+    "```\n",
+    "\n",
+    "Leetcode link: [1.two-sum](https://leetcode.cn/problems/two-sum/description/)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "class Solution:\n",
+    "    def FindNumbersWithSum(self , array: List[int], sum: int) -> List[int]:\n",
+    "        # write code here\n",
+    "        left_pivot = 0\n",
+    "        right_pivot = len(array) - 1\n",
+    "        while left_pivot < right_pivot:\n",
+    "            if array[left_pivot] + array[right_pivot] == sum:\n",
+    "                return [array[left_pivot], array[right_pivot]]\n",
+    "            elif array[left_pivot] + array[right_pivot] < sum:\n",
+    "                left_pivot += 1\n",
+    "            else:\n",
+    "                right_pivot = right_pivot - 1\n",
+    "        return []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -31,28 +56,6 @@
     }
    ],
    "source": [
-    "from typing import List\n",
-    "# @param array int整型一维数组 \n",
-    "# @param sum int整型 \n",
-    "# @return int整型一维数组\n",
-    "#\n",
-    "class Solution():\n",
-    "    def FindNumbersWithSum(self , array: List[int], sum: int) -> List[int]:\n",
-    "        # write code here\n",
-    "        output_list = []\n",
-    "        left_pivot = 0\n",
-    "        right_pivot = len(array)-1\n",
-    "        while(left_pivot < right_pivot):\n",
-    "            if array[left_pivot] + array[right_pivot] == sum:\n",
-    "                output_list.append(array[left_pivot])\n",
-    "                output_list.append(array[right_pivot])\n",
-    "                break\n",
-    "            elif array[left_pivot] + array[right_pivot] > sum:\n",
-    "                right_pivot = right_pivot -1\n",
-    "            elif array[left_pivot] + array[right_pivot] < sum:\n",
-    "                left_pivot = left_pivot + 1\n",
-    "        return output_list\n",
-    "    \n",
     "array = [1, 2, 4, 7, 11, 15]\n",
     "sum = 15\n",
     "find_solution = Solution()\n",
@@ -72,7 +75,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python38",
+   "display_name": "python312",
    "language": "python",
    "name": "python3"
   },
@@ -86,7 +89,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.12.7"
   },
   "orig_nbformat": 4
  },
