add solution for 03, 04, 05, 06, 11, 12

--- a/offer_12.ipynb
+++ b/offer_12.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 剑指 Offer 12. 矩阵中的路径\n",
+    "## 12. 矩阵中的路径\n",
     "\n",
     "请设计一个函数，用来判断在一个矩阵中是否存在一条包含某字符串所有字符的路径。路径可以从矩阵中的任意一格开始，每一步可以在矩阵中向左、右、上、下移动一格。\n",
     "\n",
@@ -33,58 +33,66 @@
     "提示：\n",
     "\n",
     "1 <= board.length <= 200\n",
-    "1 <= board[i].length <= 200"
+    "1 <= board[i].length <= 200\n",
+    "\n",
+    "Leetcode link: [79](https://leetcode.cn/problems/word-search/description/)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Solution():  \n",
-    "    def find_start(self, input_matrix, input_word):\n",
-    "        start_word = str(input_word)[0]\n",
-    "        start_index_list = []\n",
-    "        for i in range(len(input_matrix)):\n",
-    "            for j in range(len(input_matrix)):\n",
-    "                if input_matrix[i][j] == start_word:\n",
-    "                    start_index_list.append([i, j])\n",
-    "        return start_index_list\n",
-    "    \n",
-    "    def find_neighbor(self, input_matrix, pos_x, pos_y):\n",
-    "        neighbor_index_list = []\n",
-    "        x_bound = len(input_matrix[0, :])\n",
-    "        y_bound = len(input_matrix[:, 0])\n",
-    "        for i in range(len(neighbor_index_list)):\n",
-    "            if pos_x - 1 > 0:\n",
-    "                neighbor_index_list.append([pos_x - 1, pos_y])\n",
-    "            if pos_x + 1 < x_bound:\n",
-    "                neighbor_index_list.append([pos_x + 1, pos_y])\n",
-    "            if pos_y -1 > 0:\n",
-    "                neighbor_index_list.append([pos_x, pos_y - 1])\n",
-    "            if pos_y + 1 < y_bound:\n",
-    "                neighbor_index_list.append([pos_x, pos_y + 1])\n",
-    "        return neighbor_index_list\n",
-    "        \n",
-    "    \n",
-    "    def path_in_matrix(self, input_matrix, input_word):\n",
-    "        start_index_list = self.find_start(input_matrix, input_word)\n",
-    "        visited = []    # visited index\n",
-    "        for i in range(len(start_index_list)):\n",
-    "            x, y = start_index_list[i][0], start_index_list[i][1]   # start pos_x, pos_y\n",
-    "            visited.append([x, y])\n",
-    "            for j in len(str(input_word[2:])):\n",
-    "                neighbor_index_list = self.find_neighbor(input_matrix, x, y)\n",
-    "                \n",
-    "                \n",
-    "\n"
+    "from typing import List\n",
+    "\n",
+    "class Solution:\n",
+    "    def hasPath(self , matrix: List[List[str]], word: str) -> bool:\n",
+    "        # write code here\n",
+    "        if len(matrix) == 0 or len(matrix[0]) == 0:\n",
+    "            return False\n",
+    "        for i in range(len(matrix)):\n",
+    "            for j in range(len(matrix[0])):\n",
+    "                if matrix[i][j] == word[0] and self.dfs(matrix, i, j, word, 0):\n",
+    "                    return True\n",
+    "        return False\n",
+    "\n",
+    "    def dfs(self, matrix, i, j, word, idx):\n",
+    "        if i < 0 or i >= len(matrix) or j < 0 or j >= len(matrix[0]):\n",
+    "            return False \n",
+    "        if matrix[i][j] != word[idx]:\n",
+    "            return False\n",
+    "        if idx == len(word)-1:\n",
+    "            return True\n",
+    "        tmp = matrix[i][j]\n",
+    "        matrix[i][j] = '#'\n",
+    "        if self.dfs(matrix, i+1, j, word, idx+1) or \\\n",
+    "        self.dfs(matrix, i-1, j, word, idx+1) or \\\n",
+    "        self.dfs(matrix, i, j+1, word, idx+1) or \\\n",
+    "        self.dfs(matrix, i, j-1, word, idx+1):\n",
+    "            return True\n",
+    "        matrix[i][j] = tmp\n",
+    "        return False\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "python312",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   },
   "orig_nbformat": 4
  },
