--- a/offer_07.ipynb
+++ b/offer_07.ipynb
@@ -13,7 +13,7 @@
     "    <img src = images/07_0.png width = 20%>\n",
     "</center>\n",
     "\n",
-    "Leetcode link: [105](https://leetcode.cn/problems/construct-binary-tree-from-preorder-and-inorder-traversal/description/)"
+    "Leetcode link: [LC.105](https://leetcode.cn/problems/construct-binary-tree-from-preorder-and-inorder-traversal/description/)"
    ]
   },
   {
