--- a/offer_12.ipynb
+++ b/offer_12.ipynb
@@ -35,7 +35,7 @@
     "1 <= board.length <= 200\n",
     "1 <= board[i].length <= 200\n",
     "\n",
-    "Leetcode link: [79](https://leetcode.cn/problems/word-search/description/)"
+    "Leetcode link: [LC.79](https://leetcode.cn/problems/word-search/description/)"
    ]
   },
   {
