--- a/offer_23.ipynb
+++ b/offer_23.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 剑指offer 23 链表中环的入口节点\n",
+    "## 23. 链表中环的入口节点\n",
     "\n",
     "给一个长度为n链表，若其中包含环，请找出该链表的环的入口结点，否则，返回null。\n",
     "\n",
@@ -15,7 +15,7 @@
     "例如，输入{1,2},{3,4,5}时，对应的环形链表如下图所示：\n",
     "\n",
     "<center>\n",
-    "    <img src = https://uploadfiles.nowcoder.com/images/20211025/423483716_1635154005498/DA92C945EF643F1143567935F20D6B46 width=80%>\n",
+    "    <img src = images/23_0.png width=50%>\n",
     "</center>\n",
     "\n",
     "可以看到环的入口结点的结点值为3，所以返回结点值为3的结点。"
