--- a/offer_25.ipynb
+++ b/offer_25.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 剑指 Offer 25. 合并两个排序的链表\n",
+    "## 25. 合并两个排序的链表\n",
     "\n",
     "输入两个递增的链表，单个链表的长度为n，合并这两个链表并使新链表中的节点仍然是递增排序的。\n",
     "\n",
@@ -12,7 +12,7 @@
     "要求：空间复杂度 $O(1)$，时间复杂度 $O(n)$\n",
     "\n",
     "<center>\n",
-    "    <img src = https://uploadfiles.nowcoder.com/images/20211014/423483716_1634208575589/09DD8C2662B96CE14928333F055C5580 width=80%>\n",
+    "    <img src = images/25_0.png width=50%>\n",
     "</center>"
    ]
   },
