--- a/offer_15.ipynb
+++ b/offer_15.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "输入一个整数 n ，输出该数 32 位二进制表示中 1 的个数。其中负数用补码表示。\n",
     "\n",
-    "Leetcode link: [191](https://leetcode.cn/problems/number-of-1-bits/description/)"
+    "Leetcode link: [LC.191](https://leetcode.cn/problems/number-of-1-bits/description/)"
    ]
   },
   {
