--- a/offer_57.ipynb
+++ b/offer_57.ipynb
@@ -16,7 +16,7 @@
     "说明：返回 [4,11] 或者 [11,4] 都是可以的 \n",
     "```\n",
     "\n",
-    "Leetcode link: [1.two-sum](https://leetcode.cn/problems/two-sum/description/)"
+    "Leetcode link: [LC.1](https://leetcode.cn/problems/two-sum/description/)"
    ]
   },
   {
