--- a/offer_05.ipynb
+++ b/offer_05.ipynb
@@ -8,23 +8,22 @@
     "\n",
     "请实现一个函数，把字符串 s 中的每个空格替换成\"%20\"。\n",
     "\n",
-    "示例 1：\n",
-    "\n",
+    "示例 1：  \n",
     "```\n",
     "输入：s = \"We are happy.\"\n",
     "输出：\"We%20are%20happy.\"\n",
     "```\n",
     "\n",
-    "限制：\n",
+    "限制：0 <= s 的长度 <= 10000\n",
     "\n",
-    "0 <= s 的长度 <= 10000"
+    "Leetcode link: [LCR.122 ti-huan-kong-ge-lcof](https://leetcode-cn.com/problems/ti-huan-kong-ge-lcof/)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Naive method\n",
+    "方法一：\n",
     "\n",
     "使用空格分割字符串，然后每个分割的部分用 %20 连接起来。注意最后一个分割的部分尾部不需要再连接 %20。"
    ]
