--- a/offer_06.ipynb
+++ b/offer_06.ipynb
@@ -10,12 +10,13 @@
     "\n",
     "0 <= 链表长度 <= 10000\n",
     "\n",
-    "示例：\n",
-    "\n",
+    "示例：  \n",
     "```\n",
     "输入：{1,2,3}\n",
     "返回值：[3,2,1]\n",
-    "```"
+    "```\n",
+    "\n",
+    "Leetcode link: [LC.206 reverse-linked-list](https://leetcode-cn.com/problems/reverse-linked-list/)"
    ]
   },
   {
@@ -94,9 +95,6 @@
     "        self.val = x\n",
     "        self.next = None\n",
     "\n",
-    "import sys\n",
-    "sys.setrecursionlimit(100000)\n",
-    "\n",
     "class Solution:\n",
     "    def recursion(self, head: ListNode, res: List[int]):\n",
     "        if head:\n",
@@ -124,7 +122,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python38",
+   "display_name": "python311",
    "language": "python",
    "name": "python3"
   },
@@ -138,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
