--- a/offer_09.ipynb
+++ b/offer_09.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "用两个栈来实现一个队列，使用 n 个元素来完成 n 次在队列尾部插入整数 (push) 和 n 次在队列头部删除整数 (pop) 的功能。 队列中的元素为 int 类型。保证操作合法，即保证 pop 操作时队列内已有元素。\n",
     "\n",
-    "Leetcode link: [LC.232](https://leetcode.cn/problems/implement-queue-using-stacks/description/)"
+    "Leetcode link: [LC.232 implement-queue-using-stacks](https://leetcode.cn/problems/implement-queue-using-stacks/description/)"
    ]
   },
   {
