--- a/offer_10.ipynb
+++ b/offer_10.ipynb
@@ -14,7 +14,9 @@
     "\n",
     "$$\n",
     "F(n) = F(n - 1) + F(n - 2)，其中 n > 1\n",
-    "$$"
+    "$$\n",
+    "\n",
+    "Leetcode link: [LC.509 fibonacci number](https://leetcode-cn.com/problems/fibonacci-number/)"
    ]
   },
   {
